ec-pascal/Examples/bad/Example11.pas
Program Example1;
Begin
	Writeln('Hello World. Prepare to learn PASCAL!!);
	Readln;
End.
